# analisis-predictivo-avanzado

./: .gitignore  Consigna TP2.docx  README.md  app.py  pyproject.toml  requirements-notebook.txt  requirements.txt
.streamlit/: config.toml
C09 - SR1/: C09.ipynb
C10 - SR2/: C10.ipynb  C10_solución.ipynb
C10 - SR2/Results/: profiler_books_metadata_1.html
archive/pre_rebuild_notebooks/: 01_analisis_descriptivo.ipynb
artifacts/: anime_catalog.parquet  anime_deploy.parquet  artifact_manifest.json  best_params.json  demo_users.json  feature_names.json  final_recommendations.npz  hybrid_model.npz  item_features.npy  item_features.npz  item_mapping.json  model_components.npz  model_results.csv  optuna_trials.csv  recommendation_examples.json  run_summary.json  seen_final.npz  seen_interactions.npz  test_results.csv  training_history.json  user_mapping.json  validation_results.csv
config/: experiment.json
notebooks/: 02_sistema_recomendacion.ipynb  TP2_sistema_recomendacion_anime.ipynb  TP2_sistema_recomendacion_anime_pre_rerun.ipynb
results/default_models/: recommendation_examples.csv  recommendations.npz  run_summary.json  training_history.csv  (+1 more)
scripts/: create_phase2_notebook.py  create_phase3_notebook.py  create_phase4_notebook.py  create_phase5_notebook.py  create_phase6_notebook.py  execute_notebook_with_progress.py  smoke_test_pytorch.py  train_default_models.py  train_final_model.py  tune_selected_model.py  validate_data_pipeline.py  validate_final_artifacts.py  validate_phase3.py  validate_phase4.py  validate_phase5.py  validate_streamlit_app.py
(+28 files in other folders)
