[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-recommender-tp2"
version = "0.1.0"
description = "Deterministic hybrid anime recommender for the APA TP2"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["src"]